Add new notebooks

--- a/utils/ABX_preparation.ipynb
+++ b/utils/ABX_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "2bb4f757",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fcd2fe3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ratings = pd.read_parquet('/pio/scratch/1/recommender_systems/interim/Amazon/Clothing_Shoes_and_Jewelry_clean.parquet')\n",
-    "categories = pd.read_json('/pio/scratch/1/recommender_systems/interim/Amazon/meta_Clothing_Shoes_and_Jewelry_categories.json', lines=True)"
+    "categories = pd.read_parquet('/pio/scratch/1/recommender_systems/interim/Amazon/meta_Books_categories.parquet')\n",
+    "categories.category_1 = categories.category_1.map(lambda s: s.replace('&amp;', '&'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "cf0ca5d3",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "5fbf8e2b",
    "metadata": {},
    "outputs": [],
@@ -48,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [],
    "source": [
-    "df_positive = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-clothes/5-core/train.parquet')\n",
-    "df_negative = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-clothes/5-core/negative_train.parquet')\n",
+    "df_positive = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-books/5-core/train.parquet')\n",
+    "df_negative = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-books/5-core/negative_train.parquet')\n",
     "df = pd.concat([df_positive, df_negative])\n",
     "items_to_chose_from = df.asin.unique()"
    ],
@@ -65,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['B00AYQQAG8', 'B005OB0ULY', 'B000ARPN4G', ..., 'B01HF4AG3O',\n       'B01HF4AG0W', 'B01HF4AE7C'], dtype=object)"
+      "text/plain": "array(['0762782994', '1491500484', '1931296111', ..., '133591739X',\n       '006285156X', 'B01G7V1H0M'], dtype=object)"
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "d757daf4",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "955b450b",
    "metadata": {},
    "outputs": [
@@ -151,7 +152,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1fb8eacf59ee4cb3ba988f14db4e1d80"
+       "model_id": "70dd07fc5d7345ef8473e5b80bb3a92f"
       }
      },
      "metadata": {},
@@ -159,12 +160,12 @@
     }
    ],
    "source": [
-    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/5_core.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
+    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/books.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2580d0f6",
    "metadata": {},
    "outputs": [],
