--- a/svd_evaluation/SVD_evaluation_100.ipynb
+++ b/svd_evaluation/SVD_evaluation_100.ipynb
@@ -50,8 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abx_tests = pd.read_json('/pio/scratch/1/i313924/test_data/test_ABX_weighted.json\n",
-    "', lines=True)"
+    "abx_tests = pd.read_json('/pio/scratch/1/i313924/test_data/test_ABX_weighted.json', lines=True)"
    ]
   },
   {
@@ -986,7 +985,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "2d749848",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1012,14 +1015,6 @@
    "source": [
     "sns.scatterplot(x='0', y='1', data=reduced_item_embeddings[reduced_item_embeddings['category_1'].isin(['Women', 'Men'])], hue='category_1', s=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "181e23eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
