Add notebooks with current results

--- a/lightfm_evaluation/LightFM_evaluation_word2vec.ipynb
+++ b/lightfm_evaluation/LightFM_evaluation_word2vec.ipynb
@@ -368,6 +368,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "e"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "c"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "outputs": [],
    "source": [
